--- a/practicum/week-4/question1.html
+++ b/practicum/week-4/question1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -51,6 +52,35 @@
              rose,
              waterlily
        ];
+       flowerDiv = document.getElementById("flowersDiv");
+       let msg = '';
+       msg += '<div class="row align-items-end">';
+       for (let i=0; i<flowers.length /2; i++) {
+            msg += '<div class="col" >';
+                msg += '<div class="card" style="width:100%;">';
+                    msg += `<img class="card-img-top" width="100" height="100" src=${flowers[i].picture} style="height:100%;"> `;
+                    msg += '<h3 class="card-title">';
+                        msg += flowers[i].name;
+                    msg += '</h3>';
+                msg += '</div>';
+            msg += '</div>';
+       }
+       msg += '</div>';
+       msg += '<div class="row align-items-end">';
+       for (let i=flowers.length /2; i<flowers.length; i++) {
+            msg += '<div class="col" >';
+                msg += '<div class="card" style="width:100%;">';
+                    msg += `<img class="card-img-top" width="100" height="100" src=${flowers[i].picture} style="height:100%;"> `;
+                    msg += '<h3 class="card-title">';
+                        msg += flowers[i].name;
+                    msg += '</h3>';
+                msg += '</div>';
+            msg += '</div>';
+       }
+       msg += '</div>';
+       flowerDiv.innerHTML = msg;
+       
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
