--- a/practicum/week-4/question2.html
+++ b/practicum/week-4/question2.html
@@ -108,10 +108,10 @@
             if (i == 0 || i == flowers.length / 2) {
                 msg += '<div class="row align-items-end m-2">';
             }
-            msg += '<div class="col" >';
+            msg += '<div class="col-sm-3" >';
                 msg += `<div class="card" style="width:100%;" >`;
                     msg += `<img class="card-img-top" onClick="moveFlower(${i});" src=${flowers[i].picture} style="height:100%;"> `;
-                    msg += '<h3 class="card-title">';
+                    msg += '<h3 class="card-title m-auto">';
                         msg += flowers[i].name;
                     msg += '</h3>';
                 msg += '</div>';
@@ -125,7 +125,7 @@
 
         flowerDiv.innerHTML = makeHTML(flowers);
 
-       function moveFlower(i) {
+        function moveFlower(i) {
            let flower = flowers[i];
            let tmpArr = flowers.map((x) => x);
            tmpArr = tmpArr.filter((x) => x!=flower);
@@ -133,7 +133,7 @@
            console.log(tmpArr[0]);
            flowers = tmpArr;
            flowerDiv.innerHTML = makeHTML(flowers);
-       }
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
